Added Chaos notebook and simplified FD/FV schemes notebooks.

--- a/notebooks/Advection.ipynb
+++ b/notebooks/Advection.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "In this notebook, we will explore the first-order upwind scheme for the advection equation.\n",
     "\n",
-    "1. To run each of the following cells, use the keyboard shortcut **SHIFT** + **ENTER**, press the button ``run`` in the toolbar or find the option ``Cell > Run Cells`` from the menu bar. For more shortcuts, see ``Help > Keyboard Shortcuts``."
+    "To run each of the following cells, use the keyboard shortcut **SHIFT** + **ENTER**, press the button ``Run`` in the toolbar or find the option ``Cell > Run Cells`` from the menu bar. For more shortcuts, see ``Help > Keyboard Shortcuts``.\n",
+    "\n",
+    "To get started, import the required Python modules by running the cell below."
    ]
   },
   {
@@ -18,35 +20,22 @@
    "outputs": [],
    "source": [
     "# Configuration for visualizing the plots\n",
-    "%matplotlib agg\n",
-    "%config InlineBackend.figure_format = 'retina'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Similarly, import the required Python modules"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%matplotlib notebook\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "\n",
     "# Required modules\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from nbtools import init_plot, update_plot"
+    "# Import figure style and custom functions\n",
+    "import nbtools as nb"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Run the cell containing the function ``advection``. Read the comments describing each of the steps."
+    "Run the cell containing the function ``advection``. Read the comments describing each of the steps."
    ]
   },
   {
@@ -55,51 +44,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def advection(a, L, dx, dt, tf):\n",
+    "def advection_upwind(a, L, n, dt, tf):\n",
     "    # Build grid\n",
-    "    x = np.arange(0, L, dx)\n",
-    "    n = len(x)\n",
-    "    \n",
+    "    x = np.linspace(0, L, n)\n",
+    "    dx = L/n\n",
+    "\n",
     "    # Initialize solution\n",
     "    u = np.exp(-40*(x-1/2)**2)\n",
     "    ut = np.zeros(u.shape)\n",
-    "    \n",
-    "    # Pre-compute CFL number\n",
-    "    cfl = a*dt/dx\n",
-    "    \n",
-    "    # Prepare figure to plot\n",
-    "    fig, ax = init_plot(x, u)\n",
-    "    line, = ax.plot(x, u, 'o-', markersize=2, color='#bd0c00')\n",
-    "    \n",
+    "\n",
     "    # Advance solution in time\n",
     "    t = 0\n",
     "    while(t < tf):\n",
     "        for i in range(n):\n",
     "            # Enforce periodic boundary condition at x=0\n",
     "            if i == 0:\n",
-    "                ut[i] = u[i] - cfl*(u[i]-u[n-1])\n",
+    "                ut[i] = u[i] - a*dt/dx*(u[i]-u[n-1])\n",
     "            else:\n",
-    "                ut[i] = u[i] - cfl*(u[i]-u[i-1])\n",
-    "                \n",
+    "                ut[i] = u[i] - a*dt/dx*(u[i]-u[i-1])\n",
+    "\n",
     "        u[:] = ut[:]\n",
     "        t += dt\n",
-    "    \n",
-    "    # Indent next line to see animation\n",
-    "    update_plot(u, fig, line)"
+    "\n",
+    "    plt.plot(x, u, 'o-', markersize=2, label=f'$n={n}$')\n",
+    "    plt.legend()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Now run the function ``advection`` providing\n",
-    "    - ``a``: The advection speed equal to ``1``,\n",
-    "    - ``L``: The domain length equal to ``1``,\n",
-    "    - ``dx``: The grid spacing equal to ``0.01``,\n",
-    "    - ``dt``: The time step size equal to ``0.01``,\n",
-    "    - ``tf``: The final time equal to ``1``.\n",
-    "    \n",
-    "   Do not forget to indent the last line of the function using the ``Tab`` key if you want to see the animation. Note that the animation may be slow for small time-step sizes."
+    "Create a matplotlib figure and add labels to each axis. Plots will appear in this figure. A warning may appear under the figure since no labels have been created. \n",
+    "\n",
+    "**Note**: You can always run this cell again to clear the figure."
    ]
   },
   {
@@ -108,25 +85,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign the provided values to the following variables\n",
+    "plt.figure(0)\n",
+    "plt.xlabel('$x$')\n",
+    "plt.ylabel('$u(x,t)$')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now run the function ``advection_upwind`` setting\n",
+    "   - ``a``: The advection speed equal to ``1``,\n",
+    "   - ``L``: The domain length equal to ``1``,\n",
+    "   - ``n``: The number of grid points equal to ``10``,\n",
+    "   - ``dt``: The time step size equal to ``0.005``,\n",
+    "   - ``tf``: The final time equal to ``1``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make sure plot uses figure above\n",
+    "plt.figure(0)\n",
+    "\n",
+    "# Assign the corresponding values to the following variables\n",
     "a = \n",
-    "L = \n",
-    "dx = \n",
+    "L =\n",
+    "n = \n",
     "dt = \n",
     "tf = \n",
     "\n",
-    "advection(a, L, dx, dt, tf)"
+    "advection_upwind(a, L, n, dt, tf)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Now, try calling the function ``advection`` again with the following sets of values\n",
-    "    - ``a = 1``, ``L = 1``, ``dx = 0.1``, ``dt = 0.1``, ``tf = 1``,\n",
-    "    - ``a = 1``, ``L = 1``, ``dx = 0.01``, ``dt = 0.1``, ``tf = 1``.\n",
-    " \n",
-    "   what behaviour do you observe?"
+    "Now, call the function ``advection_upwind`` again with 20, 40, 80 and 160 grid points. Keep the rest of the variables the same. What behaviour do you observe? The result must be equal to the figure shown in the Linear Advection section of the Finite Difference chapter."
    ]
   },
   {
@@ -135,7 +135,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call function advection using first set of values"
+    "# Make sure plot uses figure above\n",
+    "plt.figure(0)\n",
+    "\n",
+    "# Call advection in this cell as many times as required. \n",
+    "# You may use a for loop. \n",
+    "# Note that the figure will be updated above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a new figure, and play with different time step sizes"
    ]
   },
   {
@@ -144,15 +156,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call function advection using second set of values"
+    "plt.figure(1)\n",
+    "plt.xlabel('$x$')\n",
+    "plt.ylabel('$u(x,t)$')\n",
+    "plt.legend()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Can you think of a more efficient way to advance the solution in ``advection`` ?"
+    "Now it's time to write your own code for a central advection scheme."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
