--- a/notebooks/Taylor Series.ipynb
+++ b/notebooks/Taylor Series.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "In this notebook, we will explore approximating functions using Taylor series.\n",
     "\n",
-    "1. To run each of the following cells, use the keyboard shortcut **SHIFT** + **ENTER**, press the button ``run`` in the toolbar or find the option ``Cell > Run Cells`` from the menu bar. For more shortcuts, see ``Help > Keyboard Shortcuts``."
+    "To run each of the following cells, use the keyboard shortcut **SHIFT** + **ENTER**, press the button ``Run`` in the toolbar or find the option ``Cell > Run Cells`` from the menu bar. For more shortcuts, see ``Help > Keyboard Shortcuts``.\n",
+    "\n",
+    "To get started, import the required Python modules by running the cell below."
    ]
   },
   {
@@ -19,32 +21,16 @@
    "source": [
     "# Configuration for visualizing the plots\n",
     "%matplotlib notebook\n",
-    "%config InlineBackend.figure_format = 'retina'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Import the required Python modules and functions. Some of these are\n",
-    "    - The function ``factorial`` from Python's standard module ``math``,\n",
-    "    - The symbolic math library, ``sympy``. \n",
-    "    - A module for creating plots, ``matplotlib``."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "\n",
     "# Required modules, functions and variables\n",
     "from math import factorial\n",
     "import numpy as np\n",
     "import sympy as sp\n",
     "from sympy.abc import x\n",
     "import matplotlib.pyplot as plt\n",
-    "from nbtools import get_colors\n",
+    "\n",
+    "import nbtools as nb\n",
     "\n",
     "# Allow printing sympy's math using latex\n",
     "sp.init_printing()"
@@ -54,12 +40,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Define the function ``f(x)`` to be approximated. Some common functions you may find useful are\n",
-    "    - ``sp.sin(x)``,\n",
-    "    - ``sp.cos(x)``,\n",
-    "    - ``sp.exp(x)``,\n",
+    "Define the function ``f(x)`` to be approximated. Some common functions you may find useful are\n",
+    "   - ``sp.sin(x)``,\n",
+    "   - ``sp.cos(x)``,\n",
+    "   - ``sp.exp(x)``,\n",
     "   \n",
-    "   as an example, we use the sine function. "
+    "as an example, we use the sine function. "
    ]
   },
   {
@@ -75,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Define an expansion point, which we call ``a``. "
+    "Define an expansion point, which we call ``a``. "
    ]
   },
   {
@@ -91,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Define the power of the highest-degree expansion ``n``. This is equal to the number of terms + 1. Following the example shown in the Taylor Series Chapter, we define ``n=9``."
+    "Define the power of the highest-degree expansion ``n``. This is equal to the number of terms + 1. Following the example shown in the Taylor Series Chapter, we define ``n=9``."
    ]
   },
   {
@@ -107,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Run the cell containing the function ``taylor_series``. Read the comments describing each of the steps."
+    "Run the cell containing the function ``taylor_series``. Read the comments describing each of the steps."
    ]
   },
   {
@@ -119,7 +105,7 @@
     "def taylor_series(f, a, n):\n",
     "    # Initialize plot with exact solution\n",
     "    fig, ax = plt.subplots()\n",
-    "    colors = get_colors(n+1, end=0.9)\n",
+    "    colors = nb.get_colors(n+1, end=0.9)\n",
     "    \n",
     "    # Define x-axis value range for plotting\n",
     "    X = np.linspace(-np.pi, np.pi, 100)\n",
@@ -155,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Using the values we have previously defined, we call the ``taylor_series`` function, which will plot the resulting polynomials as the number of terms is increased."
+    "Using the values we have previously defined, we call the ``taylor_series`` function, which will plot the resulting polynomials as the number of terms is increased."
    ]
   },
   {
@@ -171,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Print the approximation of $sin(x)$."
+    "Print the approximation of $sin(x)$."
    ]
   },
   {
@@ -187,8 +173,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Why do only odd-powered terms appear in ``fn`` in our original example? Repeat the process using a different expansion point, such as $x=\\dfrac{\\pi}{4}$."
+    "Why do only odd-powered terms appear in ``fn`` in our original example? Repeat the procedure above\n",
+    "using a different expansion point, such as $x=\\dfrac{\\pi}{4}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -207,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
