--- a/notebooks/Von Neumann.ipynb
+++ b/notebooks/Von Neumann.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "In this notebook, we will explore the spectral properties of advection schemes.\n",
     "\n",
-    "1. To run each of the following cells, use the keyboard shortcut **SHIFT** + **ENTER**, press the button ``run`` in the toolbar or find the option ``Cell > Run Cells`` from the menu bar. For more shortcuts, see ``Help > Keyboard Shortcuts``."
+    "To run each of the following cells, use the keyboard shortcut **SHIFT** + **ENTER**, press the button ``Run`` in the toolbar or find the option ``Cell > Run Cells`` from the menu bar. For more shortcuts, see ``Help > Keyboard Shortcuts``.\n",
+    "\n",
+    "To get started, import the required Python modules by running the cell below."
    ]
   },
   {
@@ -19,34 +21,21 @@
    "source": [
     "# Configuration for visualizing the plots\n",
     "%matplotlib notebook\n",
-    "%config InlineBackend.figure_format = 'retina'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Import the required Python modules by running the following cell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "\n",
     "# Required modules\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from nbtools import get_colors"
+    "# Import figure style and custom functions\n",
+    "import nbtools as nb"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Define the amplification factor for the explicit advection scheme"
+    "We define the amplification factor for the **explicit first-order advection** scheme"
    ]
   },
   {
@@ -64,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Define the CFL numbers ``sigmas`` and wavenumbers times grid spacing ``kmdx``"
+    " Then, we define the CFL numbers ``sigmas`` and wavenumbers times grid spacing ``kmdx``"
    ]
   },
   {
@@ -84,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Generate the plots"
+    "Generate the plots by running the following cell"
    ]
   },
   {
@@ -95,7 +84,7 @@
    "source": [
     "# Initialize plot and colors\n",
     "fig, ax = plt.subplots()\n",
-    "colors = get_colors(len(sigmas))\n",
+    "colors = nb.get_colors(len(sigmas))\n",
     "\n",
     "for sigma, color in zip(sigmas, colors):\n",
     "    amp = ampf_advection_explicit(sigma, kmdx)\n",
@@ -117,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Now try the amplification factor for the implicit advection scheme"
+    "Now try the amplification factor for the implicit advection scheme"
    ]
   },
   {
@@ -136,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Since this scheme is unconditionally stable, we show the results for larger values of ``sigma``. Generate six values of sigma following the code in step #4."
+    "Since this scheme is unconditionally stable, we show the results for larger values of ``sigma``. Generate curves for six equispaced values of $\\sigma\\in[0,10]$, following the code in the second cell."
    ]
   },
   {
@@ -156,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Complete line ``6`` in the code and generate the new plot"
+    "Complete line ``6`` in the following cell and generate the new plot"
    ]
   },
   {
@@ -167,7 +156,7 @@
    "source": [
     "# Initialize plot and colors\n",
     "fig, ax = plt.subplots()\n",
-    "colors = get_colors(len(sigmas))\n",
+    "colors = nb.get_colors(len(sigmas))\n",
     "\n",
     "for sigma, color in zip(sigmas, colors):\n",
     "    amp = # Complete code here\n",
@@ -202,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
