Added jupyter remark note structure + url variables.

--- a/book/main.tex
+++ b/book/main.tex
@@ -50,6 +50,13 @@
 
 %----------------------------------------------------------------------------------------
 
+%----------------------------------------------------------------------------------------
+%	USEFUL TEXT VARIABLES
+%----------------------------------------------------------------------------------------
+
+\newcommand{\repourl}{www.gitlab.com/bvermeir/book-cfd}
+\newcommand{\binderurl}{www.mybinder.org/}
+
 \begin{document}
 
 %----------------------------------------------------------------------------------------
